<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hu.gaborbalazs</groupId>
    <artifactId>balazs-practice</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>balazs-practice</name>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.source>25</maven.compiler.source>

        <!-- 3rd party versions -->
        <junit.version>4.13.1</junit.version>
        <junit-params.version>1.1.1</junit-params.version>
        <junit-jupiter.version>5.5.1</junit-jupiter.version>
        <mockito-junit-jupiter.version>3.0.0</mockito-junit-jupiter.version>
        <mockito-core.version>3.0.0</mockito-core.version>
        <mysql-connector.version>8.0.28</mysql-connector.version>
        <activemq.version>5.19.4</activemq.version>
        <lettuce-core.version>5.1.0.M1</lettuce-core.version>
        <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
        <glassfish-javax-el.version>3.0.1-b08</glassfish-javax-el.version>
        <google-guava.version>29.0-jre</google-guava.version>
        <apache-commons.version>3.20.0</apache-commons.version>
    </properties>

    <modules>
        <module>coding-practice</module>
        <module>javase-tryouts</module>
        <module>sandbox</module>
        <module>jdbc</module>
        <module>jms</module>
        <module>nosql</module>
        <module>javaee-tryouts</module>
    </modules>

    <!-- Available dependencies -->
    <dependencyManagement>
        <dependencies>
            <!-- JUnit 4 dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>pl.pragmatists</groupId>
                <artifactId>JUnitParams</artifactId>
                <version>${junit-params.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- JUnit 5 dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito-junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- JDBC dependencies -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector.version}</version>
            </dependency>

            <!-- JMS dependencies -->
            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>activemq-all</artifactId>
                <version>${activemq.version}</version>
            </dependency>

            <!-- NoSQL dependencies -->
            <dependency>
                <groupId>io.lettuce</groupId>
                <artifactId>lettuce-core</artifactId>
                <version>${lettuce-core.version}</version>
            </dependency>

            <!-- JavaEE dependencies -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.el</artifactId>
                <version>${glassfish-javax-el.version}</version>
            </dependency>

            <!-- Google dependencies -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google-guava.version}</version>
            </dependency>

            <!-- Apache Commons dependencies -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache-commons.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.25.4</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.21.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
